<resources>
    <string name="app_name">Course Advisor Home</string>

    <string name="semester">Current Semester</string>

    <string name="course_1">Major Course</string>
    <string name="course_2">Outside Major</string>
    <string name="course_3">Minor Course</string>
    <string name="credits">0</string>

    <string name="home_button">Check Progress</string>

    <string name="courseName">Sample Course Name</string>
    <string name="courseID">CSC 100</string>
    <string name="creditHours">4 credits </string>
    <string name="majorName">Computer Science</string>


</resources>
