<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/courseID"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/courseID" />

        <TextView
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:text="@string/courseName"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/creditHours"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/creditHours" />

        <TextView
            android:id="@+id/majorName"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/majorName"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
